--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
+  <!DOCTYPE html>
+  	<html lang="en">
 
-</body>
-</html>
+  		<head>
+  			<meta charset="utf-8">
+  			<title>GifTastic</title>
+
+<!-- Bootstrap Latest compiled and minified CSS -->
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Bootstrap Optional theme -->
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Reset Style Sheet -->
+			<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+
+ 		 </head>
+ 		 
+ 		 <body>
+ 		 	<div class="row">
+ 		 		<div class="col-lg-9">
+		 		 	<div id="gif-Adder"></div>
+		 		 </div>
+		 		 <div class="col-lg-3">
+					<form id="gif-Selector">
+						<label for="gif-Input">What would you like to see gifs about?</label>
+						<input type="text" id="gif-Input">
+						<input id="add-gif" type="submit" value="Search It">
+					</form>
+				</div>
+			</div>
+			</div>
+ 		 	<div id="gif-display"></div>
+  
+	  		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+   			 <script src=assets/javaScript/app.js></script>
+  		</body>
+
+  </html>
