--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <!-- Reset Style Sheet -->
 			<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
+<!-- CSS Sheet -->
+			<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
  		 </head>
  		 
  		 <body>
