--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
  		 </head>
  		 
  		 <body>
- 		 	<div class="row">
- 		 		<div class="col-lg-9">
-		 		 	<div id="gif-Adder"></div>
-		 		 </div>
-		 		 <div class="col-lg-3">
-					<form id="gif-Selector">
-						<label for="gif-Input">What would you like to see gifs about?</label>
-						<input type="text" id="gif-Input">
-						<input id="add-gif" type="submit" value="Search It">
-					</form>
+ 		 	<div class="container-fluid">
+	 		 	<div class="row">
+	 		 		<div class="col-lg-9 gif-Adder">
+			 		</div>
+			 		<div class="col-lg-3">
+						<form>
+							<label>What would you like to see gifs about?</label>
+							<input type="text" class="gif-Input">
+							<input class="add-gif" type="submit" value="Search It">
+						</form>
+					</div>
 				</div>
 			</div>
-			</div>
- 		 	<div id="gif-display"></div>
+ 		 	<div class="gif-display">
+ 		 	</div>
   
 	  		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
    			 <script src=assets/javaScript/app.js></script>
   		</body>
-
-  </html>
+	 </html>
