--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  		 	<div class="gif-display">
  		 	</div>
   
-	  		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+	  		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
    			 <script src=assets/javaScript/app.js></script>
   		</body>
 	 </html>
